navbar ultimated, overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 body {
+    max-width: 100vw;
+    max-height: 100vh;
     background-color: #282828 !important;
     color: white;
 }
@@ -12,6 +14,20 @@ body {
 
 }
 
+#lens-nav {
+    border-right: none !important;
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    background-color: rgba(78, 78, 78, .1);
+}
+
+.form-control {
+    border-left: none !important;
+    border-top-left-radius: 0 !important;
+    border-bottom-left-radius: 0 !important;
+    background-color: rgba(78, 78, 78, .1);
+}
+
 /* END NAV */
 
 
@@ -20,7 +36,7 @@ body {
 /* DASHBOARD */
 #dashboard {
     max-width: calc(100vw - 150px);
-    padding-top: 60px;
+
     margin-left: 150px;
     overflow-y: auto;
     overflow-x: hidden;
@@ -35,7 +51,7 @@ body {
 }
 
 /* INFO */
-#info {}
+
 
 /* END DASHBOARD */
 
